[package]

name = "rlapack"
version = "0.0.5"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
description = "LAPACK bindings and wrappers"
documentation = "http://mikkyang.github.io/rust-lapack/doc/rlapack/index.html"
homepage = "http://github.com/mikkyang/rust-lapack"
repository = "http://github.com/mikkyang/rust-lapack"
readme = "README.md"
keywords = ["LAPACK"]
license = "MIT"
build = "build.rs"

[features]
default = ["rblas"]

[dependencies]
num = "0.1"
libc = "0.2"

[dependencies.rblas]
git = "https://github.com/mikkyang/rust-blas"
optional = true
